- brought reviews back to presentation layer.
- views are now separated from the work. YES!!!
- hacked creatorId and producerId from TbWkWork.
- brought back imdb ids and ttc ids
- got ridd of the person group table.
- renamed all my controllers to cont_[name].