@@ -1,5 +1,11 @@
 now:
 ====
+	- make the work view and review dialogs show groups and not people.
+	- add a dialog to create a group, give it a name and add people to it.
+
+	- add the ability to have two instances of the same work (one in audio, one in video
+		for instance).
+
 	import all lectures in my audio archive into works.
 		How do I decide if they are TTC ? I Don't know.
 		How do I decide if they are audio books ? I Don't know.
